<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:padding="8dp"
    android:paddingBottom="16dp">
    <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">
        <EditText
                android:id="@+id/editTextEmail"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="none"
                android:layout_width="fill_parent"
                android:editable="false">
        </EditText>
        <EditText
                android:id="@+id/editTextFirstName"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:editable="false">
        </EditText>
        <EditText
                android:id="@+id/editTextLastName"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:editable="false" >
        </EditText>
        <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:layout_width="fill_parent"
                android:editable="false" >
        </EditText>
        <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:entries="@array/gender_names"
                />
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:hint="@string/birth_date"
                android:inputType="date"
                android:id="@+id/birth_date"
         />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:paddingRight="16dp"/>
            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="number"
                android:id="@+id/weight_major"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/weight_major_units"
                android:text="@string/weight_units_kg"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="number"
                android:id="@+id/weight_minor"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/weight_minor_units"
                android:text="@string/weight_units_g"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:paddingRight="16dp"/>
            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="number"
                android:id="@+id/height_major"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/height_major_units"
                android:text="@string/height_units_m"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="number"
                android:id="@+id/height_minor"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:id="@+id/height_minor_units"
                android:text="@string/height_units_cm"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/you_can_select_unit_system_in_settings" />
    </LinearLayout>
</ScrollView> 